# ddg-search-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
skills/ddg-search/: SKILL.md
skills/ddg-search/references/: notes.md
skills/ddg-search/scripts/: ddg_search.py
src/ddg_search/: cli.py
